Update fields
